another flickering issue

--- a/apps/studio/src/assets/styles/app/titlebar.scss
+++ b/apps/studio/src/assets/styles/app/titlebar.scss
@@ -115,6 +115,7 @@ $titlebar-actions-height:   30px;
 .titlebar-wrapper {
   & .titlebar.windows.fullscreen {
     display: none;
+    -webkit-app-region: no-drag;
   }
   &:hover .titlebar.windows.fullscreen {
     display: flex;
